--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,9 +23,9 @@
       }
     ],
     "paths": {
-      "@/*": [
-        "./*"
-      ]
+      "@/*": ["./*"],
+      "@/config/*": ["./config/*"],
+      "@/services/*": ["./services/*"]
     }
   },
   "include": [
@@ -33,8 +33,11 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    ".build/types/**/*.ts"
-, "services/ stripeproducts.js", "app/gototcm/page.jsx"  ],
+    ".build/types/**/*.ts",
+    "services/**/*.js",
+    "services/**/*.jsx",
+    "app/**/*.jsx"
+  ],
   "exclude": [
     "node_modules"
   ]
